# myfitness-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
src/myfitnesspal_mcp/: __init__.py  cookie_loader.py  oauth_provider.py  server.py
