[project]
name = "myfitnesspal-mcp-service"
dynamic = ["version"]
description = "Deployable MyFitnessPal MCP server (remote Claude connector) - food diary, exercises, measurements, and nutrition goals"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Andrew Doering"},
    {name = "Adam"},
]
dependencies = [
    "mcp>=1.9.0,<2.0.0",
    "myfitnesspal>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["myfitnesspal", "mcp", "nutrition", "fitness", "health", "diet", "tracking", "claude"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/myfitnesspal_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/myfitnesspal_mcp"]

[project.scripts]
myfitnesspal-mcp-service = "myfitnesspal_mcp:main"

[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
    "ipykernel",
    "mcp[cli]",
    "pytest",
    "pytest-asyncio",
]
linting = [
    "ruff",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
